[package]
name = "avr-charlie"
version = "0.1.0"
authors = ["Jannis Konrad <kabel42@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "avr-charlie"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.0.0"
embedded-hal = "0.2.7"
heapless = "0.7.16"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e29a7be5b1fa9d490ded11e539d345af041ccef6"

features = ["nano168"]

[dependencies.avr-device]
version = "0.5.1"
features = ["atmega168"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
